# AIs-with-Grenade-Launchers-Fight

./: .gitignore  CMakeLists.txt  Makefile  README.md  gameStructure.txt  headerStructure.txt  main.cpp
assets/AI/Idle/: Left.kra  Left.kra~  Right.kra~
assets/AI/Move/: Left.kra  Left.kra~  Right.kra  Right.kra~
assets/StatesUI/MainMenu/: BeautifulTitleScreen.png~
include/: ai.hpp  animation.hpp  character.hpp  definitions.hpp  endOfGenerationStats.cpp  endOfGenerationStats.hpp  entity.hpp  grenade.hpp  handleEvents.hpp  layer.hpp  map.hpp  neuralNetwork.hpp  neuron.hpp  screen.hpp  target.hpp  time.hpp  vector2d.hpp
include/GameEngine/: assetManager.cpp  assetManager.hpp  game.cpp  game.hpp  inputManager.hpp  state.hpp  stateMachine.cpp  stateMachine.hpp
include/NC/: NumCpp.hpp
include/States/: mainMenuState.cpp  mainMenuState.hpp  simulationState.cpp  simulationState.hpp
include/UI/: renderPerformance.hpp  viewPerformance.hpp
saveNeuralNetworks/: example.json
savedNeuralNetworks/: DONT_USE_ExampleLabeled.json  DO_USE_ExampleArrayOnly.json  example.json
src/: ai.cpp  animation.cpp  character.cpp  entity.cpp  grenade.cpp  neuralNetwork.cpp  neuron.cpp
src/GameEngine/: assetManager.cpp  game.cpp  inputManager.cpp  stateMachine.cpp
src/States/: mainMenuState.cpp  simulationState.cpp
